Added a bunch of things with auth and data handling
Lost track of all the stuff i did.
